[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/BRLNSDB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://real_deal/scripts/duel/DuelCardBase.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/cards/attack_1.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="BattleCardBase" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 275.0
rect_min_size = Vector2( 200, 275 )
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 100, 137.2 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="Bars" type="VBoxContainer" parent="."]
show_behind_parent = true
margin_right = 200.0
margin_bottom = 275.0
rect_min_size = Vector2( 200, 1 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colums" type="HBoxContainer" parent="Bars"]
margin_right = 200.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 16 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 0

[node name="Cost" type="MarginContainer" parent="Bars/Colums"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/Colums/Cost"]
margin_right = 25.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="Barckground" type="TextureRect" parent="Bars/Colums/Cost/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Bars/Colums/Cost/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Name" type="MarginContainer" parent="Bars/Colums"]
margin_left = 25.0
margin_right = 175.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Name" type="Label" parent="Bars/Colums/Name"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2
text = "Espada"
align = 1
valign = 1

[node name="Dexterity" type="MarginContainer" parent="Bars/Colums"]
margin_left = 175.0
margin_right = 200.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="Bars/Colums/Dexterity"]
margin_right = 25.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="Barckground" type="TextureRect" parent="Bars/Colums/Dexterity/NinePatchRect2"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Bars/Colums/Dexterity/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Description" type="MarginContainer" parent="Bars"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 272.0
rect_min_size = Vector2( 5, 256 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 130
custom_constants/margin_left = 25
custom_constants/margin_bottom = 30

[node name="Description" type="RichTextLabel" parent="Bars/Description"]
margin_left = 25.0
margin_top = 130.0
margin_right = 175.0
margin_bottom = 226.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Soy una carta super poderosa.
WAAAA"
[connection signal="mouse_entered" from="." to="." method="_on_BattleCardBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BattleCardBase_mouse_exited"]
